    throwing a exception.

* XINS/Java Client Framework:
  - Improved XINSCallResultParser with regard to logging, documentation,
    memory use and performance.
  - Changed DataElement class to support namespaces. Some methods have been
    deprecated in favor of new ones.

* Generation of server-side Java code:
  - Import type classes for the generated implementation class.

* Logdoc:
  - Added French locale.
  - XML files are now in UTF-8 encoding format.
  - Fixed small error on the English translation of the server side logdoc.
  - Translation bundle are now possible on multiple lines.

* Libraries
  - Upgraded Log4J from 1.2.6 to 1.2.9.
  - Upgraded Jakarta Commons Logging from 1.0.3 to 1.0.4.
  - Upgraded xmlenc from 0.43 to 0.44.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.1.0 ALPHA 1:

NOTE: This release is based on XINS 1.0.0-beta11.

* XINS/Java Client Framework:
  - Fixed SF.net bug #1063699: Log if call fails on error code. The log
    message 2112 was already defined for this purpose, but it was just not
    used in the code.
  - Fixed SF.net bug #1063672 (XINS call logging: Only first failure is
    logged). Each individual failure is now logged, per target.
  - Fixed bug #1063818: XINSResultParser fails if spaces exist between XML 
    elements.
  - Fixed SF.net bug #1063785: Double spaces in description of a
    XINSCallRequest.
  - Removed deprecated methods from class DataElement:
    . public Iterator getChildren()
    . public Iterator getChildren(String name)
    Changed the tests accordingly.
  - Removed class field SERVICE_DESCRIPTOR_TYPE that was deprecated since XINS
    1.0.0-beta6.
  - Removed log message which previously had the ID 2101, since it did not add
    any information. Previously it was logged right after a call was
    performed, whether it was successful or not. Replaced it by a log message