@@ -64,6 +64,9 @@
 				     location="${xins_home}/src/dtd/environments_1_0.dtd" />
 				<dtd publicId="-//XINS//DTD XINS Logdoc 1.0//EN"
 				     location="${xins_home}/src/dtd/log_1_0.dtd" />
+
+				<dtd publicId="-//XINS//DTD Function 1.1//EN"
+				     location="${xins_home}/src/dtd/function_1_1.dtd" />
 			</xmlcatalog>
 			<param name="xins_home"    expression="${xins_home}"    />
 			<param name="project_home" expression="${project_home}" />
